--- a/bno055/params/bno055_params_sd.yaml
+++ b/bno055/params/bno055_params_sd.yaml
@@ -29,7 +29,7 @@
 # Example parameters for a UART connection to the BNO055 motion sensor.
 bno055:
   ros__parameters:
-    ros_topic_prefix: "bno055/"
+    ros_topic_prefix: "imu/"
     connection_type: "uart"
     uart_port: "/dev/serial0"
     uart_baudrate: 115200
